--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,5 +1,10 @@
 server.port= 8080
 spring.application.name= api-gateway
-spring.cloud.gateway.discovery.locator.enabled= false
+spring.cloud.gateway.discovery.locator.enabled= true
 spring.cloud.gateway.discovery.locator.lower-case-service-id= true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+spring.cloud.gateway.routes[0].id=product-service
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/product-service/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
