--- a/product-service.properties
+++ b/product-service.properties
@@ -1,3 +1,6 @@
 spring.application.name= product-service
 server.port= 8091
 product.name= product-from-central-config-repo
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+
