--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -3,8 +3,5 @@ spring.application.name= api-gateway
 spring.cloud.gateway.discovery.locator.enabled= true
 spring.cloud.gateway.discovery.locator.lower-case-service-id= true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
-spring.cloud.gateway.routes[0].id=product-service
-spring.cloud.gateway.routes[0].uri=lb://product-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/product-service/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+product.service.uri=http://localhost:8091
 
