--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -4,4 +4,6 @@ spring.cloud.gateway.discovery.locator.enabled= true
 spring.cloud.gateway.discovery.locator.lower-case-service-id= true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
 product.service.uri=http://localhost:8091
+account.service.uri=http://localhost:8092
+order.service.uri=http://localhost:8093
 
